Fixes: NB#194478 - MApplicationWindow doesn't give possiblity to change style on the fly
RevBy: Dominik
Details: Added signal MTheme::styleModified which is emitted when
theme is switched or MTheme::loadCSS is called. MApplicationWindow connects
to this signal to update its style. Added styleName to MApplicationWindow
to allow styling also via style name.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,10 @@
 /*! \page news What's New in MeeGo Touch
 
+\section v02054 0.20.54
+
+\subsection New
+- MTheme::styleModified() signal, emitted when MTheme::loadCSS() was called or the theme has changed.
+
 \section v02053 0.20.53
 
 \subsection New
