Fixes: NB#195013 -  mstartup crash.
RevBy: Holger Schröder

Details:

In commit 6435eec53f203f26e1452e6bc877fa26e0448c9b I forgot to use the
correct changelog message to trigger the bug as fixed and make sure a
line about the fix is added to the debian/changelog.  This commit
tries to fix that.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ libmeegotouch (0.20.53~1) unstable; urgency=low
 
   * Unreleased
   * Implemented: SWP#DUI-4255 - Add support for user-defined identifier on a notification and notification group
+  * Fixes: NB#195013 -  mstartup crash.
 
  -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 09 Nov 2010 17:25:25 +0200
 
