Fixes: NB#202338 - Application requires signal to indicate when minimizing starts
RevBy: Tomas
Details: Provide new signals:
* MApplication::minimizing()
* MApplication::minimized()
* MApplication::minimizingCanceled()
These signals are emitted when the application is being minimized to
switcher and the minimize animation has just started, finished, or was
canceled, respectively.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,10 @@
 /*! \page news What's New in MeeGo Touch
 
+\section v02052 0.20.52
+
+\subsection New
+- MApplication: added minimizing(), minimized() and minimizingCanceled() signals
+
 \section v02049 0.20.49
 
 \subsection New
