--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.53~1) unstable; urgency=low
+
+  * Unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 09 Nov 2010 17:25:25 +0200
+
 libmeegotouch (0.20.52-1) unstable; urgency=low
 
   * New version
