--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,10 @@
 /*! \page news What's New in MeeGo Touch
 
+\section v02054 0.20.54
+
+\subsection New
+- MApplicationPage::customNavigationBarContent(). Pages can now easily define completely custom navigation bars for themselves.
+
 \section v02053 0.20.53
 
 \subsection New
