--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 libmeegotouch (0.20.53~1) unstable; urgency=low
 
   * Unreleased
+  * Implemented: SWP#DUI-4255 - Add support for user-defined identifier on a notification and notification group
 
  -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 09 Nov 2010 17:25:25 +0200
 
