Changes: MPreeditInjectEvent can provide cursor position information.
RevBy: Pekka Vuorela
Details: MPreeditInjectEvent provides the cursor position (inside
        preedit).

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -5,6 +5,7 @@
 \subsection New
 - MApplication: added minimizing(), minimized() and minimizingCanceled() signals
 - Notification users can set their own identifier to notifications and notification groups to distinquish their notifications.
+- MPreeditInjectEvent: new constructor and eventCursorPosition()
 
 \section v02049 0.20.49
 
